token arreglado